# voquill

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENCE  README.md  bgtest.ps1  build-windows-installers.ps1  docker-compose.yml  inumaki-ai-foundation-spec.md  package-lock.json  package.json  pnpm-lock.yaml  temp  turbo.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.enterprise-dev.conf.json  tauri.enterprise.conf.json  tauri.gpu.dev.conf.json  tauri.gpu.prod.conf.json  tauri.local.build.conf.json  tauri.local.conf.json  tauri.prod.conf.json
apps/desktop/src-tauri/archlinux/: .SRCINFO  PKGBUILD
apps/desktop/src-tauri/capabilities/: agent.json  default.json  overlay.json  toast.json  unified-overlay.json
apps/desktop/src-tauri/examples/: gen_bindings.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/macos/: Voquill.entitlements
apps/desktop/src-tauri/nsis/: installer-hooks.nsh  installer-hooks.nsi
apps/desktop/src-tauri/resources/: trigger-hotkey.sh
apps/desktop/src-tauri/src/: app.rs  commands.rs  errors.rs  flavor_env.rs  lib.rs  main.rs  overlay.rs  pill_process.rs
apps/desktop/src-tauri/src/db/: api_key_queries.rs  app_target_queries.rs  chat_message_queries.rs  conversation_queries.rs  hotkey_queries.rs  mcp_server_queries.rs  mod.rs  paired_remote_device_queries.rs  preferences_queries.rs  queries.rs  term_queries.rs  tone_queries.rs  tone_seed.rs  transcription_queries.rs  user_queries.rs
apps/desktop/src-tauri/src/db/migrations/: 020_app_target_tone_id.sql  036_user_duration_stats.sql  036_user_preferences_hourly_rate.sql  038_mcp_servers.sql  040_language_switch.sql  045_api_key_gcp_project.sql  (+7 more)
apps/desktop/src-tauri/src/domain/: api_key.rs  app_target.rs  chat_message.rs  conversation.rs  google_chirp.rs  hotkey.rs  keyboard.rs  mcp_server.rs  mod.rs  monitor.rs  option_key.rs  overlay.rs  paired_remote_device.rs  permissions.rs  preferences.rs  recording.rs  term.rs  text_selection.rs  toast.rs  tone.rs  transcription.rs  user.rs
apps/desktop/src-tauri/src/platform/: app_info.rs  audio.rs  audio_processing.rs  google_auth.rs  google_speech.rs  key_state.rs  keyboard.rs  mod.rs  parakeet.rs  sidecar_transcriber.rs  whisper.rs
apps/desktop/src-tauri/src/sidecar/: main.rs  mod.rs
apps/desktop/src-tauri/src/state/: counter.rs  google_chirp.rs  microsoft_oauth.rs  mod.rs  oauth.rs  overlay.rs  remote_receiver.rs  transcriber.rs
apps/desktop/src-tauri/src/system/: audio_feedback.rs  audio_playback.rs  audio_store.rs  auth_session.rs  bridge_server.rs  crypto.rs  diagnostics.rs  enterprise_oidc.rs  google_oauth.rs  gpu.rs  microsoft_oauth.rs  mod.rs  models.rs  paths.rs  remote_receiver.rs  remote_sender.rs  runtime_config.rs  tray.rs
apps/desktop/src-tauri/src/utils/: encoding.rs  log_sanitizer.rs  mod.rs
apps/desktop/src-tauri/windows/fragments/: vc-runtime.wxs
apps/windows-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-installer/src-tauri/src/: main.rs
cli/: Cargo.toml  README.md
cli/src/: auth.rs  credentials.rs  lib.rs  random_name.rs  rtdb.rs  server.rs  workspace.rs
cli/src/commands/: agent.rs  login.rs  logout.rs  mod.rs  session.rs  upgrade.rs
cli/src/platform/: mod.rs
cli/src/platform/unix/: raw_mode.rs  shell.rs  terminal.rs
cli/src/platform/windows/: mod.rs  raw_mode.rs  shell.rs  terminal.rs
(+1446 files in other folders)
