[package]
name = "voquill-cli"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "5"
pty = "0.2.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
webbrowser = "1"
