[package]
name = "voquill-cli"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "5"
portable-pty = "0.9"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "blocking",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
webbrowser = "1"
