[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
linux-gpu = ["whisper-rs/vulkan"]
mac-gpu = ["whisper-rs/metal"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
cpal = "0.15"
whisper-rs = { version = "0.15.1", default-features = false }
tauri-plugin-os = "2.3.1"
rdev = { git = "https://github.com/josiahsrc/rdev" }
rodio = "0.17"
wgpu = "0.20"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.24"
objc = "0.2"
dispatch = "0.2"
block = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
enigo = "0.1"
arboard = "3"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.1"
arboard = "3"
